<resources>
    <string name="app_name">Homework02</string>
    <string name="selectStudy_str">Select your study program:</string>
    <string name="structure_str">This course is well structured:</string>
    <string name="deadlines_str">The assignment deadlines are reasonable:</string>
    <string name="aligned_str">The course material is aligned with assignments:</string>
    <string name="submit_str">Submit</string>
    <string name="graduate_str">Graduate</string>
    <string name="undergrad_str">Undergratuate</string>
    <string name="selectAvatar_str">Select your Avatar</string>
    <string name="displayNickname_str">Nickname:</string>
    <string name="displayStructure_str">Couse Structure:</string>
    <string name="displayDeadlines_str">Assignment Deadlines:</string>
    <string name="displayAlignment_str">Matching Material with Assignments:</string>
    <string name="avatar1_str">White female brunette blue eyes</string>
    <string name="avatar3_str">White female redhead hazel eyes</string>
    <string name="avatar5_str">Black female afro</string>
    <string name="avatar2_str">White male blonde brown eyes</string>
    <string name="avatar4_str">White male brunette brown eyes</string>
    <string name="avatar6_str">Arab male brown eyes</string>
    <string name="neutral_str">Neutral</string>
</resources>
