<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectAvatarActivity">

    <TextView
        android:id="@+id/selectAvatar_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/selectAvatar_str"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/avatar1_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/avatar1_str"
        android:src="@drawable/avatar_f_1"
        app:layout_constraintEnd_toStartOf="@+id/avatar2_iv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectAvatar_tv"
        app:srcCompat="@drawable/avatar_f_1" />

    <ImageView
        android:id="@+id/avatar2_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/avatar2_str"
        android:src="@drawable/avatar_m_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/avatar1_iv"
        app:layout_constraintTop_toBottomOf="@+id/selectAvatar_tv"
        app:srcCompat="@drawable/avatar_m_3" />

    <ImageView
        android:id="@+id/avatar3_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/avatar3_str"
        android:src="@drawable/avatar_f_2"
        app:layout_constraintEnd_toStartOf="@+id/avatar4_iv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatar1_iv"
        app:srcCompat="@drawable/avatar_f_2" />

    <ImageView
        android:id="@+id/avatar4_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/avatar4_str"
        android:src="@drawable/avatar_m_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/avatar3_iv"
        app:layout_constraintTop_toBottomOf="@+id/avatar2_iv"
        app:srcCompat="@drawable/avatar_m_2" />

    <ImageView
        android:id="@+id/avatar5_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/avatar5_str"
        android:src="@drawable/avatar_f_3"
        app:layout_constraintEnd_toStartOf="@+id/avatar6_iv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatar3_iv"
        app:srcCompat="@drawable/avatar_f_3" />

    <ImageView
        android:id="@+id/avatar6_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/avatar6_str"
        android:src="@drawable/avatar_m_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/avatar5_iv"
        app:layout_constraintTop_toBottomOf="@+id/avatar4_iv"
        app:srcCompat="@drawable/avatar_m_1" />
</android.support.constraint.ConstraintLayout>